<resources>
    <string name="app_name">Memento</string>
    <string name="title_app">Memento</string>
    <string name="quotes">Citas</string>
    <string name="menu">Menu</string>
    <string name="settings">Ajustes</string>
    <string name="favorites">Favoritas</string>
    <string name="quotes_to_show">Citas a mostrar</string>
    <string name="stoics">Estoicas</string>
    <string name="coming_soon">Próximamente</string>
    <string name="enable_notifications">Activar notificaciones</string>
    <string name="notifications_description">Activa las notificaciones diarias</string>
    <string name="delete_favorite_quotes">Borrar citas favoritas</string>
    <string name="delete">Borrar</string>
    <string name="del_fav_description">Borra todas las citas guardadas ¡Atención! No se podrán recuperar</string>
    <string name="delete_all_fav_advise">¿Estas seguro que quieres borrar todas tus citas? No las podrás recuperar en un futuro</string>
    <string name="delete_advise">¿Estás seguro que quires borrar esta cita?</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_quotes_realized">Citas favoritas borradas</string>
    <string name="delete_quote_realized">Cita favorita borrada</string>
    <string name="save_quote_realized">Cita guardada en favoritos</string>
    <string name="discover_new_cotes">Descubre más citas diarias en Memento https://play.google.com/store/apps/details?id=com.jdccmobile.memento</string>
    <string name="as_he_said">Como dijo</string>
    <string name="no_internet_connection">Sin conexión a internet</string>
    <string name="no_saved_quotes">No hay citas favoritas guardadas</string>
    <string name="share">Compartir</string>
    <string name="home">home</string>
</resources>